Fixed Visible Links Print with Page print > https://app.asana.com/0/11140166463836/112930135567742/f

--- a/styles/editor-interface.css
+++ b/styles/editor-interface.css
@@ -204,6 +204,11 @@ em {
 .upfront-edit-layout .upfront-module-editing .uf-click-to-edit-text, .redactor-box .uf-click-to-edit-text {
   cursor: text; }
 
+/* --- Handling links when print --- */
+@media print {
+  a[href]:after {
+    content: none; } }
+
 /* @import 'sass/partials/button'; */
 #properties {
   position: fixed;
